// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationMenu /> Snapshots should match NavigationMenu 1`] = `
.c4 {
  border-radius: 9999px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c5 {
  width: 50%;
  height: 50%;
}

.c14 {
  width: 12px;
  height: 12px;
}

.c27 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c15 {
  margin: 0;
  padding: 0;
  font-size: 16px;
  line-height: 24px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  font-size: 16px;
}

.c18 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-style: solid;
  padding: 4px 8px 4px 8px;
  color: #6B6B78;
  border-radius: 4px;
  border-width: 1px;
  border-color: #9898A6;
  font-size: 12px;
  line-height: 16px;
  font-weight: 500;
}

.c2 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  grid-template-columns: max-content 1fr max-content;
  gap: 8px;
  padding: 12px;
  background-color: #FFFFFF;
  border-radius: 9999px;
  min-height: 64px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  overflow: hidden;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  line-height: 32px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
  line-height: 14px;
  font-weight: 500;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c3 > div:first-child {
  height: 32px;
  width: 32px;
}

.c24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  gap: 8px;
  padding: 12px;
  border-radius: 8px;
}

.c24 > div:first-child {
  height: 32px;
  width: 32px;
}

.c25 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c26 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  font-weight: 500;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  gap: 8px;
  padding: 10px 8px 10px 16px;
  border-radius: 8px;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  gap: 8px;
  padding: 10px 8px 10px 44px;
  border-radius: 8px;
}

.c20 {
  text-transform: uppercase;
  background-color: #231B22;
  color: #FFFFFF;
  border-radius: 9999px;
}

.c17 {
  color: #6B6B78;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c11 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  background-color: transparent;
  border-radius: 8px;
  list-style-type: none;
  cursor: pointer;
  margin-right: 8px;
}

.c11 svg {
  height: 20px;
  width: 20px;
}

.c11:hover,
.c11:focus {
  background-color: #D7D7E0;
}

.c11:hover .c16,
.c11:focus .c16 {
  color: #231B22;
}

.c11:hover svg,
.c11:focus svg {
  fill: #231B22;
}

.c11 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c11 a:hover,
.c11 a:focus {
  outline: none;
}

.c11 a:hover .c12,
.c11 a:focus .c12 {
  background-color: #D7D7E0;
  color: #231B22;
}

.c11 a:hover .c16,
.c11 a:focus .c16 {
  color: #231B22;
}

.c11 a:hover svg,
.c11 a:focus svg {
  fill: #231B22;
}

.c11 a.active {
  cursor: auto;
}

.c11 a.active > .c12 {
  background-color: #FFEEF2;
}

.c11 a.active > .c12 .c16 {
  color: #D8385E;
  font-weight: 500;
}

.c11 a.active > .c12 svg {
  fill: #D8385E;
}

.c11 a.active > .c12 > .c19 {
  background-color: #231B22;
}

.c22 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  background-color: transparent;
  border-radius: 8px;
  list-style-type: none;
  cursor: pointer;
  margin-right: 8px;
}

.c22 svg {
  height: 20px;
  width: 20px;
}

.c22 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: auto;
}

.c22 a:hover,
.c22 a:focus {
  outline: none;
}

.c22 a:hover .c12,
.c22 a:focus .c12 {
  background-color: #D7D7E0;
  color: #231B22;
}

.c22 a:hover .c16,
.c22 a:focus .c16 {
  color: #231B22;
}

.c22 a:hover svg,
.c22 a:focus svg {
  fill: #231B22;
}

.c22 a.active {
  cursor: auto;
}

.c22 a.active > .c12 {
  background-color: #FFEEF2;
}

.c22 a.active > .c12 .c16 {
  color: #D8385E;
  font-weight: 500;
}

.c22 a.active > .c12 svg {
  fill: #D8385E;
}

.c22 a.active > .c12 > .c19 {
  background-color: #231B22;
}

.c22 a > .c12 {
  background-color: #FFEEF2;
}

.c22 a > .c12 .c16 {
  color: #D8385E;
  font-weight: 500;
}

.c22 a > .c12 svg {
  fill: #D8385E;
}

.c22 a > .c12 > .c19 {
  background-color: #231B22;
}

.c28 {
  position: relative;
}

.c29 {
  position: absolute;
  bottom: 0;
  display: grid;
  grid-auto-columns: minmax(0,1fr);
  grid-auto-flow: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 56px;
  background-color: #FFFFFF;
  margin: 0;
  padding: 0;
  border: 1px solid #D7D7E0;
  gap: 4px;
  z-index: 2;
}

.c33 {
  margin: 0;
  padding: 0;
  font-size: 10px;
  line-height: 12px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
  max-width: 100%;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c30 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  border-radius: 8px;
  list-style-type: none;
  cursor: pointer;
}

.c30 svg {
  height: 20px;
  width: 20px;
  fill: #6B6B78;
}

.c30:hover,
.c30:focus {
  background-color: #D7D7E0;
}

.c30:hover .c32,
.c30:focus .c32 {
  color: #231B22;
}

.c30:hover svg,
.c30:focus svg {
  fill: #231B22;
}

.c30 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c30 a.active {
  cursor: auto;
  background-color: #FFEEF2;
}

.c30 a.active:not(:last-child) {
  pointer-events: none;
}

.c30 a.active div .c32 {
  color: #D8385E;
  font-weight: 500;
}

.c30 a.active div svg {
  fill: #D8385E;
}

.c34 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  border-radius: 8px;
  list-style-type: none;
  cursor: pointer;
  background-color: #FFEEF2;
}

.c34 svg {
  height: 20px;
  width: 20px;
  fill: #6B6B78;
}

.c34 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c34 a.active {
  cursor: auto;
  background-color: #FFEEF2;
}

.c34 a.active:not(:last-child) {
  pointer-events: none;
}

.c34 a.active div .c32 {
  color: #D8385E;
  font-weight: 500;
}

.c34 a.active div svg {
  fill: #D8385E;
}

.c34:not(:last-child) {
  pointer-events: none;
}

.c34 div .c32 {
  color: #D8385E;
  font-weight: 500;
}

.c34 div svg {
  fill: #D8385E;
}

.c31 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 4px;
  padding: 4px;
  border-radius: 8px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 20px;
  padding: 16px 12px;
  background-color: #F5F5FA;
  width: 280px;
  height: 100%;
  right: 0;
  -webkit-transition: width 300ms ease-in-out;
  transition: width 300ms ease-in-out;
  position: fixed;
  width: 100%;
  height: calc(100% - 56px);
  z-index: 1;
  top: 0;
  right: -100%;
  -webkit-transition: right 300ms ease-in-out;
  transition: right 300ms ease-in-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow-y: auto;
}

.c10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin: 0;
  padding: 0 0 16px 0;
  gap: 4px;
}

.c23 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

@media (min-width:1024px) {
  .c28 {
    display: none;
  }
}

@media (min-width:1024px) {
  .c0 {
    position: relative;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-flex-shrink: 0;
    -ms-flex-negative: 0;
    flex-shrink: 0;
    gap: 20px;
    padding: 16px 12px;
    background-color: #F5F5FA;
    width: 280px;
    height: 100%;
    right: 0;
    -webkit-transition: width 300ms ease-in-out;
    transition: width 300ms ease-in-out;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
            display="flex"
            elevation="small"
            height="48"
            overflow="hidden"
            width="48"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="#FFFFFF"
              height="50%"
              width="50%"
            />
          </div>
        </div>
        <div
          class="c6"
        >
          <h4
            class="c7"
          >
            Company
          </h4>
          <p
            class="c8"
          >
            Reseller
          </p>
        </div>
      </div>
    </div>
    <nav
      class="c9"
    >
      <ul
        class="c10"
      >
        <li
          class="c11"
        >
          <a
            href="https://www.gympass.com"
          >
            <div
              class="c12 c13"
            >
              <svg
                aria-hidden="true"
                class="c14"
                height="12"
                width="12"
              />
              <p
                class="c15 c16 c17"
                font-size="medium"
              >
                Subscription
              </p>
              <div
                class="c18 c19 c20"
              >
                new
              </div>
            </div>
          </a>
        </li>
        <li
          class="c11"
        >
          <a
            href="https://www.gympass.com"
          >
            <div
              class="c12 c21"
            >
              <p
                class="c15 c16 c17"
                font-size="medium"
              >
                Details
              </p>
            </div>
          </a>
        </li>
        <li
          class="c22"
        >
          <a
            href="https://www.gympass.com"
          >
            <div
              class="c12 c13"
            >
              <svg
                aria-hidden="true"
                class="c14"
                height="12"
                width="12"
              />
              <p
                class="c15 c16 c17"
                font-size="medium"
              >
                Billing
              </p>
            </div>
          </a>
        </li>
      </ul>
      <ul
        class="c10"
      >
        <li
          class="c11"
        >
          <a
            href="https://www.gympass.com"
          >
            <div
              class="c12 c13"
            >
              <svg
                aria-hidden="true"
                class="c14"
                height="12"
                width="12"
              />
              <p
                class="c15 c16 c17"
                font-size="medium"
              >
                Help
              </p>
            </div>
          </a>
        </li>
      </ul>
    </nav>
    <div
      class="c23"
    >
      <div
        class="c24"
        fill="transparent"
      >
        <div
          class="c4"
          display="flex"
          elevation="small"
          height="48"
          overflow="hidden"
          width="48"
        >
          <svg
            aria-hidden="true"
            class="c5"
            fill="#FFFFFF"
            height="50%"
            width="50%"
          />
        </div>
        <div
          class="c25"
        >
          <p
            class="c26"
          >
            User
          </p>
          <p
            class="c27"
            color="deep"
          >
            Admin, Supervisor
          </p>
        </div>
      </div>
    </div>
  </div>
  <nav
    class="c28"
  >
    <ul
      class="c29"
    >
      <li
        class="c30"
      >
        <a
          href="https://www.gympass.com"
        >
          <div
            class="c31"
          >
            <svg
              aria-hidden="true"
              class="c14"
              height="12"
              width="12"
            />
            <p
              class="c32 c33"
            >
              Subscription
            </p>
          </div>
        </a>
      </li>
      <li
        class="c34"
      >
        <a
          href="https://www.gympass.com"
        >
          <div
            class="c31"
          >
            <svg
              aria-hidden="true"
              class="c14"
              height="12"
              width="12"
            />
            <p
              class="c32 c33"
            >
              Billing
            </p>
          </div>
        </a>
      </li>
      <li
        class="c30"
      >
        <div>
          <div
            class="c31"
          >
            <svg
              aria-hidden="true"
              class="c14"
              height="12"
              width="12"
            />
            <p
              class="c32 c33"
            >
              More
            </p>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`<NavigationMenu /> Snapshots should match NavigationMenu.Menu with an action 1`] = `
.c4 {
  border-radius: 9999px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c5 {
  width: 50%;
  height: 50%;
}

.c10 {
  width: 24px;
  height: 24px;
}

.c2 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  display: grid;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  grid-template-columns: max-content 1fr max-content;
  gap: 8px;
  padding: 12px;
  background-color: #FFFFFF;
  border-radius: 9999px;
  min-height: 64px;
  cursor: pointer;
}

.c2:hover,
.c2:focus {
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
  overflow: hidden;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  line-height: 32px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 500;
  font-size: 14px;
  line-height: 14px;
  font-weight: 500;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c8 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c9 svg {
  fill: #D8385E;
}

.c3 > div:first-child {
  height: 32px;
  width: 32px;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 20px;
  padding: 16px 12px;
  background-color: #F5F5FA;
  width: 280px;
  height: 100%;
  right: 0;
  -webkit-transition: width 300ms ease-in-out;
  transition: width 300ms ease-in-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
            display="flex"
            elevation="small"
            height="48"
            overflow="hidden"
            width="48"
          >
            <svg
              aria-hidden="true"
              class="c5"
              fill="#FFFFFF"
              height="50%"
              width="50%"
            />
          </div>
        </div>
        <div
          class="c6"
        >
          <h4
            class="c7"
          >
            Company
          </h4>
          <p
            class="c8"
          >
            Reseller
          </p>
        </div>
        <div
          class="c9"
        >
          <svg
            aria-hidden="true"
            class="c10"
            height="24"
            width="24"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<NavigationMenu /> Snapshots should match NavigationMenu.Switcher with actions 1`] = `
.c3 {
  border-radius: 9999px;
  background-color: #9898A6;
  box-shadow: 0 2px 4px -1px rgba(152,152,166,0.2),0 4px 5px 0px rgba(152,152,166,0.14),0 1px 10px 0px rgba(152,152,166,0.12);
  width: 48px;
  height: 48px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  overflow: hidden;
}

.c4 {
  width: 50%;
  height: 50%;
}

.c9 {
  width: 20px;
  height: 20px;
}

.c7 {
  margin: 0;
  padding: 0;
  font-size: 12px;
  line-height: 16px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  color: #6B6B78;
}

.c8 {
  -webkit-transition: background-color 300ms ease-in-out;
  transition: background-color 300ms ease-in-out;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  width: 40px;
  height: 40px;
  border-radius: 9999px;
}

.c8 svg {
  fill: #D8385E;
}

.c8:hover,
.c8:focus {
  cursor: pointer;
  background-color: #D7D7E0;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  width: 100%;
  gap: 8px;
  padding: 12px;
  border-radius: 8px;
}

.c2 > div:first-child {
  height: 32px;
  width: 32px;
}

.c5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
}

.c6 {
  margin: 0;
  padding: 0;
  font-size: 14px;
  line-height: 20px;
  color: #231B22;
  font-family: Rubik;
  font-weight: 400;
  font-weight: 500;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  gap: 20px;
  padding: 16px 12px;
  background-color: #F5F5FA;
  width: 280px;
  height: 100%;
  right: 0;
  -webkit-transition: width 300ms ease-in-out;
  transition: width 300ms ease-in-out;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 4px;
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
        fill="transparent"
      >
        <div
          class="c3"
          display="flex"
          elevation="small"
          height="48"
          overflow="hidden"
          width="48"
        >
          <svg
            aria-hidden="true"
            class="c4"
            fill="#FFFFFF"
            height="50%"
            width="50%"
          />
        </div>
        <div
          class="c5"
        >
          <p
            class="c6"
          >
            User
          </p>
          <p
            class="c7"
            color="deep"
          >
            Admin, Supervisor
          </p>
        </div>
        <div
          aria-expanded="false"
          aria-haspopup="menu"
          class="c8"
          data-state="closed"
          id="radix-:r0:"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="c9"
            height="20"
            width="20"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
